fix z-index of tooltip on dashboard

--- a/assets/css/beta/modules/dashboard.less
+++ b/assets/css/beta/modules/dashboard.less
@@ -79,7 +79,7 @@
     font-size: (30px * @scale);
     padding-top: (55px * @scale);
     padding-bottom: (25px * @scale);
-    z-index: 1;
+    z-index: 2;
     opacity: 0.9;
     &.no-results {
       text-align: center;
@@ -389,5 +389,5 @@
 [data-tooltip]:hover:before,
 [data-tooltip]:hover:after {
   visibility: visible;
-  z-index: 10;
+  z-index: 1;
 }
